Bug 15890 - tdbtool does not return error exit code upon failure
Summary: tdbtool does not return error exit code upon failure
Status: RESOLVED FIXED
Alias: None
Product: TDB
Classification: Unclassified
Component: tools (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Samba QA Contact
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-30 16:59 UTC by Guenther Deschner
Modified: 2026-03-31 03:34 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2025-07-30 16:59:12 UTC
tdbtool always exits with 0 error code even when there have been failures.
Comment 1 Samba QA Contact 2025-08-02 08:21:03 UTC
This bug was referenced in samba master:

3c9ab8e211edc6147e136c978bc909f9814b420f
Comment 2 Jennifer Sutton 2026-03-31 03:34:41 UTC
Closing as fixed.